Add seed db initializer for project

--- a/REST_API_TEMPLATE/appsettings.json
+++ b/REST_API_TEMPLATE/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=Restful;User Id=sa;Password=Welcome2022;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
