--- a/REST_API_TEMPLATE/REST_API_TEMPLATE.csproj
+++ b/REST_API_TEMPLATE/REST_API_TEMPLATE.csproj
@@ -22,10 +22,12 @@
     <None Remove="Models\" />
     <None Remove="Data\" />
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Data\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig" />
